# media-admin

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
docs/: README.md  api.md  architecture.md  dashboard.md  database.md  file-organization.md  filename-parsing.md  movies.md  scanning.md  settings.md  shows.md  watcher.md
src/: __init__.py  config.py  database.py  main.py
src/models/: __init__.py  episode.py  library_log.py  movie.py  rss_feed.py  settings.py  show.py  watcher_log.py
src/routers/: __init__.py  actions.py  feeds.py  movies.py  scan.py  settings.py  shows.py  watcher.py
src/services/: __init__.py  file_utils.py  matcher.py  movie_matcher.py  movie_renamer.py  movie_scanner.py  pagination.py  quality.py  renamer.py  scanner.py  tmdb.py  tvdb.py  watcher.py  watcher_pipeline.py
src/static/: index.html
src/static/css/: style.css
src/static/js/: app.js  core.js  dashboard.js  feeds.js  issues.js  movies.js  scan.js  settings.js  shows.js  watcher.js
tests/: __init__.py
